2006-10-25  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valaarray.vala,
	  vala/valacallback.vala, vala/valaclass.vala, vala/valadatatype.vala,
	  vala/valaenum.vala, vala/valaflags.vala, vala/valainterface.vala,
	  vala/valastruct.vala, vala/valatypereference.vala, vapi/glib-2.0.vala:
	  start to use const specifier for strings to reduce number of warnings
	  during C compilation

2006-10-25  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valacodevisitor.vala,
	  vala/valasemanticanalyzer.vala, vala/valacodegenerator.vala,
	  vala/valabaseaccess.vala: support base access
	* vala/vala.h, vala/Makefile.am: update
	* tests/test-025.vala: test base access
	* tests/Makefile.am: update

2006-10-25  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump
	* compiler/valacompiler.vala: --version support
	* compiler/Makefile.am: always include config.h to keep compatibility
	* vapi/config.vala: add binding for config.h
	* vapi/Makefile.am: update

2006-10-25  Jürg Billeter  <j@bitron.ch>

	* vala/valasourcefile.vala: support dependencies on constants

2006-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: don't crash when comparing value type
	  with null

2006-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: don't crash on already resolved type
	  references
	* vala/valasemanticanalyzer.vala: support typeof expression
	* vala/valacodegenerator.vala: improve support for null-terminated
	  arrays
	* vala/valainterfacewriter.vala: don't write type arguments for arrays

2006-10-08  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support enum values

2006-10-06  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.4 release

2006-10-06  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala, vala/valaflags.vala, vala/valaenum.vala,
	  vala/valadatatype.vala, vala/valaarray.vala, vala/valaclass.vala,
	  vala/valastruct.vala: add get and set value support