@@ -1,5 +1,10 @@
 2006-10-25  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valacodegenerator.vala: cast object instances in comparisons to
+	  reduce the number of warnings during C compilation
+
+2006-10-25  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valacodegenerator.vala, vala/valaarray.vala,
 	  vala/valacallback.vala, vala/valaclass.vala, vala/valadatatype.vala,
 	  vala/valaenum.vala, vala/valaflags.vala, vala/valainterface.vala,
